New filters command ( vibrato, distortion, timescale,.. )